<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ativity.Exercise8Fragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_titel_8"
        android:textSize="30dp"
        android:gravity="center"
        android:background="@color/fra_primary"
        android:textColor="@color/red"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nhap_thong_bao"
        android:id="@+id/edtNhapThongBao"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_thong_bao"
        android:backgroundTint="@color/primary"
        android:textSize="20dp"
        android:id="@+id/btnThongBao"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_danh_sach_san_pham"
        android:textSize="30dp"
        android:gravity="center"
        android:background="@color/fra_primary"
        android:textColor="@color/red"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nhap_tensp"
        android:id="@+id/edtTenSP"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nhap_giasp"
        android:id="@+id/edtGiaSP"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_them"
        android:backgroundTint="@color/primary"
        android:textSize="20dp"
        android:id="@+id/btnThem"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lv"/>


</LinearLayout>