<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Ativity.RevenueStatisticActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@color/white"
                android:layout_marginEnd="4dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/icon_back"
                android:onClick="onBackClicked"/>
            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/tvtitle"
                android:text="Thống kê"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Từ ngày: "
                android:textSize="18dp"
                android:layout_marginLeft="10sp"/>

            <Button
                android:id="@+id/btnChooseDateFrom"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialogFrom"
                android:backgroundTint="@color/gray"
                android:text="@string/btn_chon_ngay"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Đến ngày: "
                android:textSize="18dp"
                android:layout_marginLeft="10sp"/>
            <Button
                android:id="@+id/btnChooseDateTo"
                android:layout_width="159dp"
                android:backgroundTint="@color/gray"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialogTo"
                android:text="@string/btn_chon_ngay"
                android:textColor="@color/black"
                android:textSize="18dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn"
                android:backgroundTint="@color/orange"
                android:elevation="3dp"
                android:text="@string/btn_bat_dau"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/layoutchart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/datefromto"
                    android:text="Từ ngày - đến ngày"
                    android:layout_weight="1"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvtotal"
                    android:text="Tổng: 100 vnd" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnexportfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:backgroundTint="@color/primary"
                    android:elevation="3dp"
                    android:text="@string/btn_export_file"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <com.anychart.AnyChartView
                    android:id="@+id/any_chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>